--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,12 @@ jobs:
           username: ${{ secrets.ALIYUN_USERNAME}}
           password: ${{ secrets.ALIYUN_TOKEN}}
       -
+        name: sync github description to dockerhub
+        uses: meeDamian/sync-readme@v1.0.6
+        with:
+          pass: ${{ secrets.DOCKERHUB_TOKEN }}
+          description: true
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
