--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         name: sync github description to dockerhub
         uses: meeDamian/sync-readme@v1.0.6
         with:
-          pass: ${{ secrets.DOCKERHUB_TOKEN }}
+          pass: ${{ secrets.DOCKER_PASS }}
           description: true
       -
         name: Build and push
